--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/me2.JPG" alt="" /></a>
-					<h1><strong>Hi there👋！I am Yushi She, a senior undergraduate student majored in Computer Science at University of Michigan</strong>
+					<h1><strong>Hi there👋！I am Yushi She, a senior undergraduate student majored in Computer Science at the University of Michigan-Ann Arbor</strong>
 				</div>
 			</header>
 
@@ -29,18 +29,18 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Hi there👋, thanks for visiting my webpage！I am Yushi She (佘雨时), a senior undergraduate student majored in Computer Science at the <a href="https://umich.edu/">University of Michigan</a>. I will also get another B.S.E. degree from ECE in <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. 
-							I particularly interested in machine learning/deep learning, robotics, computer vision and AI drug discovery. I am fortunate to work with <a href='https://bme.umich.edu/people/zhongming-liu/'>Prof. Zhongming Liu</a>, <a href="https://cernaklab.com/">Prof. Timothy Cernak</a>, and Prof. Ranjan Pal as
-							undergraduate research assistant. 
+						<p>Hi👋, thanks for visiting my webpage！I am Yushi She (佘雨时), a senior undergraduate student majoring in Computer Science at the <a href="https://umich.edu/">University of Michigan</a>. I will also get another B.S.E. degree from ECE in <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>. 
+							I am particularly interested in scientific computation, computer graphics, and the potential that computer science can bring to healthcare, including AI for drug discovery, high-efficiency computation in clinics, and the design of reliable distributed systems that can support fast big data analysis and privacy protection in the future of healthcare. I am fortunate to work with <a href="https://inpac.physics.sjtu.edu.cn/Web/FacultyDetail/LiangLI">Dr.Liang Li</a>, <a href="https://pdhillon.com/">Dr. Paramveer Dhillon</a>, <a href="https://sites.google.com/umich.edu/ranjanswebspace/home">Dr. Ranjan Pal</a> and <a href='https://bme.umich.edu/people/zhongming-liu/'>Dr. Zhongming Liu</a> as
+							 research assistant across my undergraduate studying. 
 
 
 						</p>
 						<p>
-							Outside research and studying, I love traveling, reading and outdoor activities. 
+							In my leisure time, I love traveling, reading, and outdoor activities. Feel free to contact me and chat with me at the link at the bottom!
 						</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#two" class="button">Learn More</a></li>
-						</ul>
+						</ul> -->
 					</section>
 					
 				<!-- Two -->
@@ -48,39 +48,40 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/mc.png" class="image fit thumb"><img src="images/mc.png" alt="" /></a>
-								<h3>Motion Correction</h3>
-								<p>The project for my honorary senior thesis: a novel and powerful algorithm to remove respiratory motion artifacts from row MRI data</p>
+								<a href="images/mc.png" class="image fit thumb"><img src="images/mc.png" alt="" width="200" height="180"/></a>
+								<h3>Motion Correction for Gastrointestinal Magnetic Resonance Imaging</h3>
+								<p>The project for my honorary senior thesis: an unsupervised and highly effective algorithm to remove the respiratory motion artifact from human GI-MRI while maintaining the GI tract motion pattern<a href="https://github.com/yushi111/image-registration"> [Code]</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/mol.png" class="image fit thumb"><img src="images/mol.png" alt="" /></a>
+								<a href="images/surface.jpg" class="image fit thumb"><img src="images/surface.jpg" alt="" width="200" height="180"/></a>
+								<h3>Surface-based Characterization of Gastric Anatomy and Motility using Magnetic Resonance Imaging and Neural Ordinary Differential Equation</h3>
+								<p>A novel approach to characterize the motility of the stomach wall by neural ODE. <a href="https://www.biorxiv.org/content/10.1101/2022.10.17.512633v1.full">[PDF]</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/mol.png" class="image fit thumb"><img src="images/mol.png" alt="" width="200" height="180"/></a>
 								<h3><a href="https://github.com/yushi111/MolTransformers/">Molecular Transformer</a></h3>
 								<p>A transformer model to generate novel molecules with similar chemical properties based on existing molecules</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/stomach.png" class="image fit thumb"><img src="images/stomach.png" alt="" /></a>
-								<h3>Interactive 3D Visulization Tool</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/stomach.png" class="image fit thumb"><img src="images/stomach.png" alt="" width="200" height="180"/></a>
+								<h3>Interactive 3D Visualization Tool</h3>
+								<p>An open source visualization tool implemented in Python for stomach visualization based on Meshplot</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/mr.png" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/mr.png" alt="" width="200" height="180"/></a>
 								<h3>Flexible Telepresence Healthcare Robot</h3>
 								<p>A flexible assembly robot that supports remote-control medicine dispense</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/mars.png" class="image fit thumb"><img src="images/mars.png" alt="" /></a>
+								<a href="images/mars.png" class="image fit thumb"><img src="images/mars.png" alt="" width="200" height="180"/></a>
 								<h3><a href="details/marsRover.html">Mars Rover</a></h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>A multi-functional Mars rover robot that won the best designing award.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/fulls/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
