--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/me2.JPG" alt="" /></a>
-					<h1><strong>Hi there👋！I am Yushi She, a senior undergraduate student majored in Computer Science at the University of Michigan-Ann Arbor</strong>
+					<a href="#" class="image avatar"><img src="images/me2.jpg" alt="" /></a>
+					<h1><strong>Hi👋！I am Yushi She, a senior undergraduate student majored in Computer Science at the University of Michigan-Ann Arbor</strong>
 				</div>
 			</header>
 
