--- a/details/marsRover.html
+++ b/details/marsRover.html
@@ -10,6 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
+		<style>
+			img {
+				width: 100%;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
