--- a/details/healthrobot.html
+++ b/details/healthrobot.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <style>
-        img {
+        img video{
             width: 100%;
         }
     </style>
