--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<!-- One -->
 		<section id="one">
-			<header class="major">
+			<!-- <header class="major">
 				<h2>About Me</h2>
 			</header>
 			<p>Hi👋, thanks for visiting my webpage！I am Yushi She (佘雨时), a senior undergraduate student majoring in
@@ -50,7 +50,10 @@
 			<p>
 				In my leisure time, I love traveling, reading, and outdoor activities. Feel free to contact me and chat
 				with me at the link at the bottom!
-			</p>
+			</p> -->
+
+
+
 			<!-- <ul class="actions">
 							<li><a href="#two" class="button">Learn More</a></li>
 						</ul> -->
@@ -60,6 +63,27 @@
 		<section id="two"></section>
 		<h2>Recent Projects</h2>
 		<div class="row">
+			<article class="col-6 col-12-xsmall work-item">
+				<a href="images/bio452.png" class="image fit thumb"><img src="images/bio452.png" alt="" width="200"
+						height="200" /></a>
+				<h3>Bio452: A fun two Player strategy game</h3>
+				<p><a href="https://yushi123.itch.io/p2-gold"> [Play it online]</a><a
+						href="https://www.youtube.com/watch?v=RErSpMlUj5I"> [Online Trailer]</a></p>
+			</article>
+			<article class="col-6 col-12-xsmall work-item">
+				<a href="images/zelda.png" class="image fit thumb"><img src="images/zelda.png" alt="" width="200"
+						height="200" /></a>
+				<h3>Recreation of classic the Legend of Zelda (EECS494 P1)</h3>
+				<p>Game created by Unity</p>
+				<p><a href="https://yushi123.itch.io/zelda"> [Play it online]</a></p>
+			</article>
+			<article class="col-6 col-12-xsmall work-item">
+				<a href="images/p2.png" class="image fit thumb"><img src="images/p2.png" alt="" width="200"
+						height="200" /></a>
+				<h3>A simple but fun tower defense game</h3>
+				<p>Game created by Unity</p>
+				<p><a href="https://yushi123.itch.io/p2-gold"> [Play it online]</a></p>
+			</article>
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/mc.png" class="image fit thumb"><img src="images/mc.png" alt="" width="200"
 						height="200" /></a>
@@ -83,7 +107,7 @@
 				<p>A transformer model to generate novel molecules with similar chemical properties based on existing
 					molecules<a href="https://github.com/yushi111/MolTransformers"> [Code]</a></p>
 			</article>
-			
+
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/stomach.png" class="image fit thumb"><img src="images/stomach.png" alt="" width="200"
 						height="200" /></a>
