--- a/index.html
+++ b/index.html
@@ -66,15 +66,41 @@
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/bio452.png" class="image fit thumb"><img src="images/bio452.png" alt="" width="200"
 						height="200" /></a>
-				<h3>Bio452: A fun two Player strategy game</h3>
-				<p><a href="https://yushi123.itch.io/p2-gold"> [Play it online]</a><a
-						href="https://www.youtube.com/watch?v=RErSpMlUj5I"> [Online Trailer]</a></p>
+				<h3>BIOLOGY 452: Field Ecology of Snail-Fungus Interaction</h3>
+				<p>In this two-player asymmetric RTS game, players control Mushroom and Snail as two opposing species
+					that aim to destroy each other in an enclosed natural environment with limited resources. Each side
+					has unique abilities and tools to help it achieve dominance over the other.</p>
+				<p style="color: black;">Contributions:</p>
+				<p>This game was jointly developed by yanmeeei, lllllcf, dawnsqrl and me. I was responsible for the game
+					logic design, snail action implementation, and other controlling system.</p>
+				<p style="color: black;">Technology Used</p>
+				<p>This project is based on a non-URP 2D Unity template. We made use of an RTS gameplay framework
+					developed by Code Monkey. All images and downloadable archives are hosted on the GitHub repository.
+				</p>
+				<p><a href="https://dawnsqrl.itch.io/bio452"> [Play it online]</a><a
+						href="https://www.youtube.com/watch?v=RErSpMlUj5I"> [Online Trailer]</a>
+					<a href="https://github.com/dawnsqrl/2cb416c75d1f9d14/releases/download/v0-au/WindowsBuild.zip">[Download
+						Windows Build]</a>
+				<a
+					href="https://github.com/dawnsqrl/2cb416c75d1f9d14/releases/download/v0-au/MacBuild.zip">[Download
+					Mac Build]</a></p>
 			</article>
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/zelda.png" class="image fit thumb"><img src="images/zelda.png" alt="" width="200"
 						height="200" /></a>
-				<h3>Recreation of classic the Legend of Zelda (EECS494 P1)</h3>
-				<p>Game created by Unity</p>
+				<h3>Legend of Zelda: The End Dungeon</h3>
+				<p>This is a Unity remaster of the classic 1986 game The Legend of Zelda, with a customized extra level
+					"The End Dungeon" that features new maps, weapons, and mechanisms.</p>
+				
+				<p style="color: black;">Technology Used</p>
+				<p>This is a Unity remaster of the classic 1986 game "The Legend of Zelda," with an extra customized
+					level that features new maps, weapons and mechanisms. The remaster was developed using the
+					programming language C#, a robust and widely-used programming language in the gaming industry, and
+					Unity, a popular game engine that provides a suite of tools and features for cross-platform game
+					development. The remaster utilizes the capabilities of Unity to bring a modern touch to the classic
+					game while maintaining the original charm and gameplay.
+					The WebGL build of the game is hosted on GitHub Page, a web hosting service that allows developers
+					to host static web pages directly from a GitHub repository.</p>
 				<p><a href="https://yushi123.itch.io/zelda"> [Play it online]</a></p>
 			</article>
 			<article class="col-6 col-12-xsmall work-item">
