--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Strata by HTML5 UP</title>
+	<title>Yushi's Personal Website 雨时的个人网站</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -81,9 +81,9 @@
 						href="https://www.youtube.com/watch?v=RErSpMlUj5I"> [Online Trailer]</a>
 					<a href="https://github.com/dawnsqrl/2cb416c75d1f9d14/releases/download/v0-au/WindowsBuild.zip">[Download
 						Windows Build]</a>
-				<a
-					href="https://github.com/dawnsqrl/2cb416c75d1f9d14/releases/download/v0-au/MacBuild.zip">[Download
-					Mac Build]</a></p>
+					<a href="https://github.com/dawnsqrl/2cb416c75d1f9d14/releases/download/v0-au/MacBuild.zip">[Download
+						Mac Build]</a>
+				</p>
 			</article>
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/zelda.png" class="image fit thumb"><img src="images/zelda.png" alt="" width="200"
@@ -91,7 +91,7 @@
 				<h3>Legend of Zelda: The End Dungeon</h3>
 				<p>This is a Unity remaster of the classic 1986 game The Legend of Zelda, with a customized extra level
 					"The End Dungeon" that features new maps, weapons, and mechanisms.</p>
-				
+
 				<p style="color: black;">Technology Used</p>
 				<p>This is a Unity remaster of the classic 1986 game "The Legend of Zelda," with an extra customized
 					level that features new maps, weapons and mechanisms. The remaster was developed using the
