--- a/index.html
+++ b/index.html
@@ -66,11 +66,15 @@
 			<article class="col-6 col-12-xsmall work-item">
 				<a href="images/bio452.png" class="image fit thumb"><img src="images/bio452.png" alt="" width="200"
 						height="200" /></a>
-				<h3>BIOLOGY 452: Field Ecology of Snail-Fungus Interaction</h3>
+				<!-- <h3>BIOLOGY 452: Field Ecology of Snail-Fungus Interaction</h3>
 				<p>In this two-player asymmetric RTS game, players control Mushroom and Snail as two opposing species
 					that aim to destroy each other in an enclosed natural environment with limited resources. Each side
-					has unique abilities and tools to help it achieve dominance over the other.</p>
-				<p style="color: black;">Contributions:</p>
+					has unique abilities and tools to help it achieve dominance over the other.</p> -->
+					<h3>Explore the Battle for Survival in BIOLOGY 452: Field Ecology of Snail-Fungus Interaction!</h3>
+					<p>Dive into the complex and fascinating world of nature’s hidden wars with our innovative two-player asymmetric RTS game. In BIOLOGY 452: Field Ecology of Snail-Fungus Interaction, you’ll step into the roles of either the cunning Mushroom or the resilient Snail, each with their own unique strategies and abilities.</p>
+					<p>Set in an enclosed natural environment with limited resources, your goal is simple: achieve dominance over your opponent. But beware—this is no ordinary battle. The Mushroom's ability to spread rapidly through spores must contend with the Snail's adaptability and resourcefulness. Each side offers a distinct gameplay experience, making every match a fresh and thrilling encounter.</p>
+					<p>Who will emerge victorious in this epic clash of species? Test your strategy, adaptability, and survival instincts in BIOLOGY 452 and discover the delicate balance of nature's fiercest rivalries!</p>
+					<p style="color: black;">Contributions:</p>
 				<p>This game was jointly developed by yanmeeei, lllllcf, dawnsqrl and me. I was responsible for the game
 					logic design, snail action implementation, and other controlling system.</p>
 				<p style="color: black;">Technology Used</p>
