--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 					has unique abilities and tools to help it achieve dominance over the other.</p> -->
 					<h3>Explore the Battle for Survival in BIOLOGY 452: Field Ecology of Snail-Fungus Interaction!</h3>
 					<p>Dive into the complex and fascinating world of nature’s hidden wars with our innovative two-player asymmetric RTS game. In BIOLOGY 452: Field Ecology of Snail-Fungus Interaction, you’ll step into the roles of either the cunning Mushroom or the resilient Snail, each with their own unique strategies and abilities.</p>
+					<br>
 					<p>Set in an enclosed natural environment with limited resources, your goal is simple: achieve dominance over your opponent. But beware—this is no ordinary battle. The Mushroom's ability to spread rapidly through spores must contend with the Snail's adaptability and resourcefulness. Each side offers a distinct gameplay experience, making every match a fresh and thrilling encounter.</p>
+					<br>
 					<p>Who will emerge victorious in this epic clash of species? Test your strategy, adaptability, and survival instincts in BIOLOGY 452 and discover the delicate balance of nature's fiercest rivalries!</p>
 					<p style="color: black;">Contributions:</p>
 				<p>This game was jointly developed by yanmeeei, lllllcf, dawnsqrl and me. I was responsible for the game
@@ -94,9 +96,13 @@
 				<a href="images/zelda.png" class="image fit thumb"><img src="images/zelda.png" alt="" width="200"
 						height="200" /></a>
 				<h3>Legend of Zelda: The End Dungeon</h3>
-				<p>This is a Unity remaster of the classic 1986 game The Legend of Zelda, with a customized extra level
-					"The End Dungeon" that features new maps, weapons, and mechanisms.</p>
-
+				<!-- <p>This is a Unity remaster of the classic 1986 game The Legend of Zelda, with a customized extra level
+					"The End Dungeon" that features new maps, weapons, and mechanisms.</p> -->
+					<p>Step back into the world of Hyrule like never before with Legend of Zelda: The End Dungeon, a Unity remaster of the iconic 1986 game that started it all. This fan-made revival breathes new life into the classic adventure, offering enhanced graphics, smoother gameplay, and a thrilling new challenge: the all-new End Dungeon.</p>
+					<br>
+					<p>Explore brand-new maps, wield powerful new weapons, and master unique game mechanisms designed to push even the most seasoned adventurers to their limits. Whether you're a veteran hero or new to the legend, The End Dungeon offers fresh excitement while staying true to the original spirit of The Legend of Zelda.</p>
+					<br>
+					<p>Embark on this epic journey once more and discover what awaits at the final frontier of Hyrule. Are you ready to face the ultimate challenge? Legend of Zelda: The End Dungeon is calling—answer the hero's call today!</p>
 				<p style="color: black;">Technology Used</p>
 				<p>This is a Unity remaster of the classic 1986 game "The Legend of Zelda," with an extra customized
 					level that features new maps, weapons and mechanisms. The remaster was developed using the
